# WeatherResearch

./: .gitignore  PLAN.md  README.md  pyproject.toml
approach1/: README.md  __init__.py  station_api.py  station_cleaning.py  station_observations_overview.ipynb
bufr_cleaning/: view_bufr.ipynb
encoder/: README.md
encoder/configs/: pipeline_a_debug.toml
encoder/src/encoder_training/: __init__.py  config.py  datasets.py  devices.py  hf_manifest.py  losses.py  models.py  run_pipeline_a_debug.py  targets.py  trainer.py
notebook/: 00_aifs_baseline_walkthrough.ipynb  01_aardvark_data_walkthrough.ipynb  02_aardvark_forecast_walkthrough.ipynb  03_aardvark_e2e_finetune_walkthrough.ipynb  aardvark_local.py  phase0.py  rawdata_to_ic.ipynb
src/weather_research/: __init__.py  __main__.py  aardvark_compat.py  aardvark_initial_conditions.py  aardvark_observations.py  project_paths.py  torch_pickle.py  weather_state_schema.py  weather_state_tables.py  weather_state_xarray.py
tests/: test_aardvark_initial_conditions.py  test_aardvark_observations.py  test_approach1_station_api.py  test_weather_state_tables.py  test_weather_state_xarray.py
