[project]
name = "weather-research"
version = "0.1.0"
description = "Notebook-led AI-DOP research workspace for observation-to-initial-condition weather forecasting."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "dask[array]>=2024.8.0",
    "einops>=0.8.0",
    "numpy>=1.26.0,<3.0.0",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "scipy>=1.11.0",
    "torch>=2.3.0",
    "tqdm>=4.66.0",
    "xarray>=2024.6.0",
    "zarr>=2.18.0,<3.0.0",
]

[project.optional-dependencies]
notebooks = [
    "cartopy>=0.23.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
    "jupyterlab>=4.2.0",
    "matplotlib>=3.8.0",
    "nbclient>=0.10.0",
    "nbformat>=5.10.0",
    "timm==0.6.13",
]
aifs = [
    "anemoi-inference[huggingface]==0.6.3",
    "anemoi-models==0.5.0",
    "earthkit-data>=0.11.0",
    "earthkit-regrid==0.4.0",
    "eccodeslib>=2.46.0",
    "ecmwf-opendata>=0.3.19",
    "huggingface-hub>=0.24.0",
    "torch-geometric==2.4.0",
]
weatherbench = [
    "weatherbench2 @ git+https://github.com/google-research/weatherbench2.git",
]

[project.scripts]
weather-research = "weather_research.__main__:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_research"]

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.uv]
package = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
